--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,3 +53,28 @@ h1, h2 {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+
+#hero-outer {
+    width: 100%;
+    height: 600px;
+    overflow: hidden;
+}
+
+#hero-image {
+    width: 100%;
+    height: 600px;
+    background: url(../images/hero-image.webp) no-repeat center center;
+    animation-name: hero-zoom;
+    animation-duration: 5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes hero-zoom {
+    form {
+        transform: scale(1);
+    }
+
+    to {
+        transform: scale(1.1);
+    }
+}
