--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ h1, h2 {
     width: 100%;
     height: 600px;
     overflow: hidden;
+    position: relative;
 }
 
 #hero-image {
@@ -77,4 +78,26 @@ h1, h2 {
     to {
         transform: scale(1.1);
     }
+}
+
+#cover-text, #cover-text h2 {
+    background: #fff;
+}
+
+#cover-text {
+    font-size: 130%;
+    font-family: Oswald, sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 4px;
+
+    width: 300px;
+    height: 200px;
+
+    padding-top: 40px;
+    padding-left: 10px;
+    background-color: rgba(241, 109, 107, .7);
+
+    bottom: 30px;
+    right: 150px;
+    position: absolute;
 }
