--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ h1, h2 {
 #logo {
     float: left;
     font-size: 280%;
+    margin-left: 30px ;
 }
 
 /* navigation links */
@@ -54,6 +55,8 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
+/* hero image and cover text  */
+
 #hero-outer {
     width: 100%;
     height: 600px;
@@ -70,6 +73,7 @@ h1, h2 {
     animation-fill-mode: forwards;
 }
 
+/* creates the level of zoom for hero image */
 @keyframes hero-zoom {
     form {
         transform: scale(1);
@@ -81,7 +85,7 @@ h1, h2 {
 }
 
 #cover-text, #cover-text h2 {
-    background: #fff;
+    color: #fff;
 }
 
 #cover-text {
@@ -100,4 +104,43 @@ h1, h2 {
     bottom: 30px;
     right: 150px;
     position: absolute;
+}
+
+/* club ethos */
+#club-ethos {
+    height: 600px;
+}
+
+#left-about {
+    padding-top: 30px;
+    width: 33%;
+    float: left;
+}
+
+#center-about {
+    background-color: green;
+    padding-top: 30px;
+    width: 33%;
+    margin: 0 auto;
+}
+
+#right-about {
+    background-color: silver;
+    padding-top: 30px;
+    width: 33%;
+    float: right;
+}
+
+.left-about-heading {
+    width: 60%;
+    float: right;
+    line-height: 20px;
+    clear: both;
+    margin-bottom: 50px;
+}
+
+hr {
+    border-top: 1px solid #3a3a3a;
+    width: 100%;
+    margin: 5px 0;
 }
