--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -10,13 +11,13 @@ body {
     color: #3a3a3a;
 }
 
-/*headings and logos*/
+/* headings and logo */
 
 h1, h2 {
     font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
-    color: #252525;    
+    color: #252525; 
 }
 
 #logo {
@@ -118,8 +119,6 @@ h1, h2 {
 }
 
 #center-about {
-    background-color: green;
-    padding-top: 30px;
     width: 33%;
     margin: 0 auto;
 }
@@ -158,4 +157,27 @@ hr {
 
 .left-about-heading h2 {
     text-align: left;
+}
+
+#welcome {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 280%;
+}
+
+#circle-container {
+    height: 300px;
+    width: 300px;
+    padding: 30px;
+    border-style: solid;
+    border-color: #ccc;
+    border-width: 1px;
+    border-radius: 50%;
+    margin: 0 auto;
+}
+
+#circle-cover-bg {
+    background: url(../images/ethos-center-image.jpg) no-repeat center center;
+    height: 100%;
+    border-radius: 50%;
 }
