--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -269,6 +269,14 @@ footer {
         padding: 0;
     }
 
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+        text-align: center;
+    }
+
     hr {
         display: none;
     }
@@ -306,4 +314,14 @@ footer {
 .left-about-heading p, .right-about-heading p{
     text-align: center;
     padding: 0 20px;
+}
+
+#photos {
+    column-count: 3;
+}
+
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
+    }
 }
